--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,45 @@ a {
     flex-wrap: wrap;
 }
 
+/* Loader container styles */
+.loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    /* Semi-transparent white background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    /* Ensure loader appears above other content */
+}
+
+/* Loader animation styles */
+.loader {
+    border: 8px solid #f3f3f3;
+    /* Light gray border */
+    border-top: 8px solid #3498db;
+    /* Blue border for animation */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    /* Animation for spinning effect */
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .overlay {
     position: absolute;
     height: 80vh;
@@ -441,7 +480,7 @@ h1 {
 .counter-section {
     position: relative;
     /* Ensure positioning for overlay */
-    background-image: url('./assets/img/counter.jpeg');
+    background-image: url('../img/counter.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     height: 300px;
@@ -541,7 +580,7 @@ h1 {
 .adani-section {
     position: relative;
     /* Ensure positioning for overlay */
-    background-image: url('./assets/img/adani.png');
+    background-image: url('../img/adani.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 648px;
