fix: folder structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+/* Github Link for the code : https://github.com/avezqureshi14/brickfolio-mohammad-avez  */
+/* Deployed Link 🔴 : https://brickfolio-mohammad-avez.netlify.app/  */
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
